<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddProduct">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:visibility="gone">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_round_container"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/add_product" />

            <EditText
                android:id="@+id/name"
                style="@style/edit_text_style"
                android:layout_marginTop="20dp"
                android:hint="@string/product_name" />

            <EditText
                android:id="@+id/quantity"
                style="@style/edit_text_style"
                android:layout_marginTop="30dp"
                android:gravity="top"
                android:hint="@string/quantity" />

            <EditText
                android:id="@+id/price"
                style="@style/edit_text_style"
                android:layout_marginTop="30dp"
                android:gravity="top"
                android:hint="@string/price"

                />

            <EditText
                android:id="@+id/unit"
                style="@style/edit_text_style"
                android:layout_marginTop="30dp"
                android:gravity="top"
                android:hint="@string/unit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/button_bgcolor"
                android:paddingVertical="15dp"
                android:text="@string/add"
                android:textSize="20sp"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>