<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".UpdatePrices">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:visibility="gone">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/splashscreen"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_notifications_active_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/button_bgcolor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_round_container"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/update_price_change"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/changeName"
                style="@style/edit_text_style"
                android:layout_marginTop="20dp"
                android:hint="@string/price_change_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/button_bgcolor"
                android:paddingVertical="15dp"
                android:text="@string/update"
                android:textSize="20sp"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>